k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: filmbench-api
  namespace: filmbench
spec:
  selector:
    app: filmbench-api
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
