k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: filmbench-web
  namespace: filmbench
spec:
  selector:
    app: filmbench-web
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
